Fix the alignment of submenu items on mobile

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -69,7 +69,7 @@
 				@media (--tablet) {
 					border-bottom: var(--active-menu-item-border-height) solid #7b90ff;
 					border-left: none;
-					padding-bottom: calc( var(--wp--style--block-gap) + var(--active-menu-item-border-height, 0px) );
+					padding-bottom: calc(var(--wp--style--block-gap) + var(--active-menu-item-border-height, 0px));
 				}
 			}
 
@@ -105,12 +105,15 @@
 	& .wp-block-navigation__container .wp-block-navigation__submenu-container {
 		font-size: 15px;
 		gap: 0.5em;
+		padding-top: calc(var(--wp--style--block-gap) / 2);
 		padding-bottom: calc(var(--wp--style--block-gap) / 2);
 		border: none;
+		left: 0;
 
 		@media (--tablet) {
 			font-size: inherit;
 			gap: inherit;
+			padding-top: 0;
 			padding-bottom: 0;
 
 			& a:hover,
@@ -120,13 +123,18 @@
 		}
 
 		& .wp-block-navigation-item a {
-			padding: calc(var(--wp--style--block-gap) / 2) var(--wp--style--block-gap);
+			padding: calc(var(--wp--style--block-gap) / 4);
+
+			@media (--tablet) {
+				padding: calc(var(--wp--style--block-gap) / 2) var(--wp--style--block-gap);
+			}
 		}
 	}
 
 	& .wp-block-navigation__container .wp-block-navigation-item.global-header__overflow-menu {
 
 		@media (--tablet) {
+
 			/* Add extra space around the overflow … to make a bigger tap/hover target. */
 			& a {
 				padding-left: var(--wp--style--block-gap);
